--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <nav class="navbar">
     <div class="container nav-container">
-      <a href="#hero" class="site-logo">VKM</a>
+  <a href="#hero" class="site-logo"><img src="img/logo.png" alt="Vinay Kumar Mahato Logo" class="navbar-logo"></a>
       <button class="menu-toggle" aria-label="Toggle navigation">
         <i class="fas fa-bars"></i>
       </button>
