--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
       <div class="skills-grid">
 
         <div class="skills-category">
-          <img src="java.png" alt="Java Icon" class="skill-icon">
+          <img src="img/java.png" alt="Java Icon" class="skill-icon">
           <h3>Programming Languages:</h3>
           <ul>
             <li><strong>Java</strong> (Core, J2EE, JDBC, Servlets)</li>
@@ -473,7 +473,7 @@
         </div>
 
         <div class="skills-category">
-          <img src="framework.png" alt="Frameworks Icon" class="skill-icon">
+          <img src="img/framework.png" alt="Frameworks Icon" class="skill-icon">
           <h3>Frameworks & Libraries:</h3>
           <ul>
             <li><strong>Spring Boot</strong>, Spring MVC, Spring Security</li>
@@ -484,7 +484,7 @@
         </div>
 
         <div class="skills-category">
-          <img src="database-storage.png" alt="Database Icon" class="skill-icon">
+          <img src="img/database-storage.png" alt="Database Icon" class="skill-icon">
           <h3>Databases:</h3>
           <ul>
             <li><strong>MySQL</strong> (DDL, DML, Triggers, Indexing)</li>
@@ -494,7 +494,7 @@
         </div>
 
         <div class="skills-category">
-          <img src="devops.png" alt="DevOps Icon" class="skill-icon">
+          <img src="img/devops.png" alt="DevOps Icon" class="skill-icon">
           <h3>DevOps & Tools:</h3>
           <ul>
             <li><strong>Docker</strong> (Containerization)</li>
@@ -507,7 +507,7 @@
         </div>
 
         <div class="skills-category">
-          <img src="requirements.png" alt="Soft Skills Icon" class="skill-icon">
+          <img src="img/requirements.png" alt="Soft Skills Icon" class="skill-icon">
           <h3>Soft Skills & Leadership:</h3>
           <ul>
             <li><strong>Mentorship</strong> – Educating 500K+ Learners</li>
@@ -518,7 +518,7 @@
         </div>
 
         <div class="skills-category">
-          <img src="fitness.png" alt="Fitness Icon" class="skill-icon">
+          <img src="img/fitness.png" alt="Fitness Icon" class="skill-icon">
           <h3>Fitness & Lifestyle:</h3>
           <ul>
             <li>🏋️‍♂️ Regular Gym (5:30–6:50 PM)</li>
@@ -531,6 +531,8 @@
       </div>
     </div>
   </section>
+  
+
 
   <section id="projects" class="projects-section">
     <div class="container">
@@ -542,7 +544,7 @@
 
         <!-- Homemade Food Marketplace -->
         <div class="project-card">
-          <img src="home mad.png" alt="Homemade Food Platform" class="project-screenshot">
+          <img src="img/home mad.png" alt="Homemade Food Platform" class="project-screenshot">
           <h3>Homemade Food Marketplace</h3>
           <p class="project-description">Developed a full-stack platform connecting home cooks with customers to order
             healthy, affordable homemade meals. Includes secure login, order tracking, payment integration, and customer
@@ -555,7 +557,7 @@
 
         <!-- QuickServe Online -->
         <div class="project-card">
-          <img src="quick service.png" alt="QuickServe Online Project" class="project-screenshot">
+          <img src="img/quick service.png" alt="QuickServe Online Project" class="project-screenshot">
           <h3>QuickServe Online (In Progress)</h3>
           <p class="project-description">A local e-service marketplace offering bookings for services like printing,
             repairs, and more. Features AI recommendations, chatbot assistance, and fraud detection for customer safety.
@@ -568,7 +570,7 @@
 
         <!-- L-EduTrack AI Platform -->
         <div class="project-card">
-          <img src="Edutrack.png" alt="L-EduTrack AI Learning" class="project-screenshot">
+          <img src="img/Edutrack.png" alt="L-EduTrack AI Learning" class="project-screenshot">
           <h3>L-EduTrack AI Learning Platform</h3>
           <p class="project-description">An AI-powered gamified learning platform offering personalized learning paths,
             real-time analytics, and a community-driven ecosystem for student engagement and growth.</p>
@@ -583,7 +585,7 @@
 
         <!-- AI Mock Interview Platform -->
         <div class="project-card">
-          <img src="ai moc.png" alt="AI Interview Platform" class="project-screenshot">
+          <img src="img/ai moc.png" alt="AI Interview Platform" class="project-screenshot">
           <h3>AI Mock Interview Platform</h3>
           <p class="project-description">
             Simulates real-world interview experiences using AI, helping users practice coding, behavioral, and system
@@ -598,7 +600,7 @@
 
         <!-- 50+ AI Frontend Websites -->
         <div class="project-card">
-          <img src="50 project.png" alt="AI Frontend Projects" class="project-screenshot">
+          <img src="img/50 project.png" alt="AI Frontend Projects" class="project-screenshot">
           <h3>50+ AI-Generated Frontend Websites</h3>
           <p class="project-description">Designed and developed 50+ stunning frontend websites using AI design tools,
             modern HTML/CSS/JS techniques, and creative UI principles. All source code available for inspiration and
@@ -625,8 +627,8 @@
             <li>Provided IT consulting that improved client infrastructure scalability by 25%.</li>
             <li>Launched internship/training programs for 100+ learners in Java, Python & Cloud.</li>
           </ul>
-          <img src="https://via.placeholder.com/80x80/007bff/FFFFFF?text=Inoglle+Logo" alt="Inoglle Technologies Logo"
-            class="company-logo">
+          <!-- <img src="https://via.placeholder.com/80x80/007bff/FFFFFF?text=Inoglle+Logo" alt="Inoglle Technologies Logo"
+            class="company-logo"> -->
         </div>
 
         <!-- ADV SparkTech -->
@@ -638,8 +640,8 @@
             <li>Guided 500+ students in real-world projects using JavaScript, Python, and React.</li>
             <li>Hosted career mentoring sessions leading to multiple student internships and jobs.</li>
           </ul>
-          <img src="https://via.placeholder.com/80x80/28a745/FFFFFF?text=SparkTech" alt="ADV SparkTech Logo"
-            class="company-logo">
+          <!-- <img src="https://via.placeholder.com/80x80/28a745/FFFFFF?text=SparkTech" alt="ADV SparkTech Logo"
+            class="company-logo"> -->
         </div>
 
         <!-- ADV Indian Coder -->
@@ -651,8 +653,8 @@
             <li>Helped over 2,000 learners get certified and placed through specialized playlists.</li>
             <li>Boosted engagement by 35% with project-based learning content.</li>
           </ul>
-          <img src="https://via.placeholder.com/80x80/dc3545/FFFFFF?text=ADV+Logo" alt="ADV Indian Coder Logo"
-            class="company-logo">
+          <!-- <img src="https://via.placeholder.com/80x80/dc3545/FFFFFF?text=ADV+Logo" alt="ADV Indian Coder Logo"
+            class="company-logo"> -->
         </div>
 
         <!-- ADV HopeHaven -->
@@ -663,8 +665,8 @@
             <li>Led 50+ outreach programs, impacting 10,000+ lives in education, health, and housing.</li>
             <li>Built a national volunteer network of 300+ individuals and raised funding by 20%.</li>
           </ul>
-          <img src="https://via.placeholder.com/80x80/ff6f61/FFFFFF?text=HopeHaven" alt="ADV HopeHaven Logo"
-            class="company-logo">
+          <!-- <img src="https://via.placeholder.com/80x80/ff6f61/FFFFFF?text=HopeHaven" alt="ADV HopeHaven Logo"
+            class="company-logo"> -->
         </div>
 
         <!-- Freelance via Upwork -->
@@ -675,7 +677,7 @@
             <li>Authored 50+ technical articles, increasing client website traffic by 30%.</li>
             <li>Developed full-stack apps using Java, Python, and MySQL for global clients.</li>
           </ul>
-          <img src="https://via.placeholder.com/80x80/17a2b8/FFFFFF?text=Upwork" alt="Upwork Logo" class="company-logo">
+          <!-- <img src="https://via.placeholder.com/80x80/17a2b8/FFFFFF?text=Upwork" alt="Upwork Logo" class="company-logo"> -->
         </div>
 
         <!-- Java Internships -->
@@ -686,8 +688,8 @@
             <li>Developed scalable Java applications with APIs and backend integrations.</li>
             <li>Collaborated in Agile environments with focus on clean, testable code.</li>
           </ul>
-          <img src="https://via.placeholder.com/80x80/ffc107/343a40?text=Java+Intern" alt="Java Internship Logo"
-            class="company-logo">
+          <!-- <img src="https://via.placeholder.com/80x80/ffc107/343a40?text=Java+Intern" alt="Java Internship Logo"
+            class="company-logo"> -->
         </div>
 
         <!-- Web Development Internships -->
@@ -698,8 +700,8 @@
             <li>Built responsive websites using HTML, CSS, JavaScript, and integrated APIs.</li>
             <li>Worked on UI/UX improvements and dynamic content for real projects.</li>
           </ul>
-          <img src="https://via.placeholder.com/80x80/6610f2/FFFFFF?text=Web+Dev" alt="Web Dev Logo"
-            class="company-logo">
+          <!-- <img src="https://via.placeholder.com/80x80/6610f2/FFFFFF?text=Web+Dev" alt="Web Dev Logo"
+            class="company-logo"> -->
         </div>
 
         <!-- Power BI Apprentice -->
@@ -710,7 +712,7 @@
             <li>Designed interactive dashboards and optimized data models.</li>
             <li>Enhanced business insights with clear visualization and transformation.</li>
           </ul>
-          <img src="https://via.placeholder.com/80x80/6f42c1/FFFFFF?text=BI" alt="Power BI Logo" class="company-logo">
+          <!-- <img src="https://via.placeholder.com/80x80/6f42c1/FFFFFF?text=BI" alt="Power BI Logo" class="company-logo"> -->
         </div>
 
         <!-- Mentoring Role -->
@@ -721,7 +723,7 @@
             <li>Taught Physics, Chemistry, Biology & English to 8th–12th-grade students.</li>
             <li>Fostered a values-based, tech-enabled, interactive classroom environment.</li>
           </ul>
-          <img src="https://via.placeholder.com/80x80/20c997/FFFFFF?text=Mentor" alt="Mentor Logo" class="company-logo">
+          <!-- <img src="https://via.placeholder.com/80x80/20c997/FFFFFF?text=Mentor" alt="Mentor Logo" class="company-logo"> -->
         </div>
 
         <!-- Director Role -->
@@ -732,8 +734,8 @@
             <li>Led curriculum development and research initiatives.</li>
             <li>Oversaw educator teams and drove academic performance strategy.</li>
           </ul>
-          <img src="https://via.placeholder.com/80x80/fcbf49/FFFFFF?text=Director" alt="Tutorial Logo"
-            class="company-logo">
+          <!-- <img src="https://via.placeholder.com/80x80/fcbf49/FFFFFF?text=Director" alt="Tutorial Logo"
+            class="company-logo"> -->
         </div>
 
       </div>
@@ -754,7 +756,7 @@
 
         <!-- Event 1: ChatGPT Mastery -->
         <div class="event-card">
-          <img src="ChatGPT Mastery.png" alt="ChatGPT Webinar Thumbnail">
+          <img src="img/ChatGPT Mastery.png" alt="ChatGPT Webinar Thumbnail">
           <h4>ChatGPT Mastery: Unlock AI Productivity</h4>
           <p><strong>Date:</strong> August 5, 2025</p>
           <p><strong>Platform:</strong> Zoom / Google Meet</p>
@@ -766,7 +768,7 @@
 
         <!-- Event 2: LinkedIn & GitHub Personal Branding -->
         <div class="event-card">
-          <img src="LinkedIn & GitHub Profile Webinar.png" alt="LinkedIn GitHub Webinar">
+          <img src="img/LinkedIn & GitHub Profile Webinar.png" alt="LinkedIn GitHub Webinar">
           <h4>Create a Professional LinkedIn & GitHub Profile</h4>
           <p><strong>Date:</strong> August 10, 2025</p>
           <p><strong>Platform:</strong> Google Meet</p>
@@ -778,7 +780,7 @@
 
         <!-- Event 3: Docker Crash Course -->
         <div class="event-card">
-          <img src="Docker Crash Course for Beginners.png" alt="Docker Workshop Thumbnail">
+          <img src="img/Docker Crash Course for Beginners.png" alt="Docker Workshop Thumbnail">
           <h4>Docker Crash Course for Beginners</h4>
           <p><strong>Date:</strong> August 15, 2025</p>
           <p><strong>Platform:</strong> Zoom</p>
@@ -790,7 +792,7 @@
 
         <!-- Event 4: MySQL Zero to Hero -->
         <div class="event-card">
-          <img src="MySQL Zero to Hero Webinar.png" alt="MySQL Webinar Thumbnail">
+          <img src="img/MySQL Zero to Hero Webinar.png" alt="MySQL Webinar Thumbnail">
           <h4>MySQL Zero to Hero: Beginner to Advanced</h4>
           <p><strong>Date:</strong> August 20, 2025</p>
           <p><strong>Platform:</strong> Google Meet</p>
@@ -802,7 +804,7 @@
 
         <!-- Event 5: Java Basics Bootcamp -->
         <div class="event-card">
-          <img src="Java Basics Bootcamp.png" alt="Java Bootcamp Thumbnail">
+          <img src="img/Java Basics Bootcamp.png" alt="Java Bootcamp Thumbnail">
           <h4>Java Basics Bootcamp for Beginners</h4>
           <p><strong>Date:</strong> August 25-27, 2025</p>
           <p><strong>Platform:</strong> Zoom</p>
@@ -819,7 +821,7 @@
 
         <!-- Rrase College -->
         <div class="guest-lecture-card">
-          <img src="prase college.jpg" alt="Rrase College Logo" class="college-logo">
+          <img src="img/prase college.jpg" alt="Rrase College Logo" class="college-logo">
           <h4>"Strategies for Future Success" – Rrase College of Engineering</h4>
           <p class="event-date">February 10, 2025</p>
           <p class="event-description">Delivered an inspirational guest talk about mindset, skills, and career roadmap
@@ -829,7 +831,7 @@
 
         <!-- LinkedIn Audio Room -->
         <div class="guest-lecture-card">
-          <img src="linkedin event.jpg" alt="Audio Session" class="college-logo">
+          <img src="img/linkedin event.jpg" alt="Audio Session" class="college-logo">
           <h4>"HR x Tech Insights – Skills for Tomorrow"</h4>
           <p class="event-date">March 2, 2025</p>
           <p class="event-description">Speaker in a live LinkedIn Audio Session discussing tech skills hiring managers
@@ -839,7 +841,7 @@
 
         <!-- Java Workshop Hosted -->
         <div class="guest-lecture-card">
-          <img src="java past webinar.jpg" alt="Java Webinar at DSCET" class="college-logo">
+          <img src="img/java past webinar.jpg" alt="Java Webinar at DSCET" class="college-logo">
           <h4>"Unlocking the Power of Java" – Dhanalakshmi Srinivasan College of Engineering</h4>
           <p class="event-date">March 19–20, 2024</p>
           <p class="event-description">Offline Java Webinar focused on core Java development. Students received
@@ -850,7 +852,7 @@
 
         <!-- Online Presence Enhancement -->
         <div class="guest-lecture-card">
-          <img src="linkedin profile creation past.jpg" alt="LinkedIn & GitHub Workshop Poster" class="college-logo">
+          <img src="img/linkedin profile creation past.jpg" alt="LinkedIn & GitHub Workshop Poster" class="college-logo">
           <h4>"Build Your Online Presence for Career Success"</h4>
           <p class="event-date">September 28, 2025</p>
           <p class="event-description">Live workshop for students on LinkedIn, GitHub, and digital branding to boost
@@ -1117,7 +1119,7 @@
     </div>
     <div class="image-content order-1 md:order-2 flex-shrink-0">
       <!-- Replace this placeholder image URL with the actual path to your fitness photo -->
-      <img src="Fitness home.png" alt="Vinay Kumar Fitness" class="overview-img
+      <img src="img/vinay fitofficial.png" alt="Vinay Kumar Fitness" class="overview-img
                 w-72 h-72 md:w-96 md:h-96 object-cover rounded-full shadow-2xl
                 border-4 border-purple-500
                 " />
