--- a/index.html
+++ b/index.html
@@ -17,28 +17,35 @@
 </head>
 
 <body>
+   <nav class="navbar">
+        <div class="container nav-container">
+            <a href="index.html" class="site-logo">
+                <img src="img/logo.png" alt="Vinay Kumar Mahato Logo" class="navbar-logo">
+            </a>
+            <div class="nav-menu">
+                <ul class="nav-links" id="nav-links">
+                    <li><a href="index.html#about">About</a></li>
+                    <li><a href="index.html#skills">Skills</a></li>
+                    <li><a href="index.html#projects">Projects</a></li>
+                    <li><a href="certificate.html">Certificates</a></li>
+                    <li><a href="index.html#experience">Experience</a></li>
+                    <li><a href="index.html#webinars">Webinars</a></li>
+                    <li><a href="index.html#leadership">Courses</a></li>
+                    <li><a href="index.html#testimonials">Testimonials</a></li>
+                    <li><a href="Fitness.html">Fitness</a></li>
+                    <li><a href="index.html#contact">Contact</a></li>
+                </ul>
+                <button class="theme-toggle" id="theme-toggle" aria-label="Toggle dark mode">
+                    <i class="fas fa-moon"></i>
+                    <i class="fas fa-sun"></i>
+                </button>
+                <button class="menu-toggle" id="menu-toggle" aria-label="Toggle navigation">
+                    <i class="fas fa-bars"></i>
+                </button>
+            </div>
+        </div>
+    </nav>
 
-  <nav class="navbar">
-    <div class="container nav-container">
-  <a href="#hero" class="site-logo"><img src="img/logo.png" alt="Vinay Kumar Mahato Logo" class="navbar-logo"></a>
-      <button class="menu-toggle" aria-label="Toggle navigation">
-        <i class="fas fa-bars"></i>
-      </button>
-      <ul class="nav-links">
-        <li><a href="#about">About</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#Certificates">Certificates</a></li>
-
-        <li><a href="#experience">Experience</a></li>
-        <li><a href="index.html#webinars">Free Live Webinar + Certi</a></li>
-        <li><a href="#leadership">Free Courses</a></li>
-        <li><a href="#testimonials">Testimonials</a></li>
-        <li><a href="#Fitness">Fitness</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </div>
-  </nav>
 
   <div class="global-flying-container">
     <!-- Global Butterflies -->
